@@ -77,6 +77,7 @@ Common.choice.ok             =OK
 Common.choice.cancel         =Cancel
 Common.choice.yes            =Yes
 Common.choice.no             =No
+Common.choice.close          =Close
 Common.title.confirm         =Confirm
 Common.title.error           =Error
 
